WORKSPACE/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:13:54 **** Incremental Build of configuration Default for project Firmware_SaberLigth ****
make 
Using optimization level g
Using newlib nano. No printf with floats supported
CC app.c
app/src/app.c: In function 'main':
app/src/app.c:68:21: error: 'delay_time' undeclared (first use in this function)
   delayInaccurateMs(delay_time); //retardo bloqueante 22ms, opcional
                     ^~~~~~~~~~
app/src/app.c:68:21: note: each undeclared identifier is reported only once for each function it appears in
make: *** [makefile:164: app/out/app/src/app.o] Error 1
15:14:06 **** Incremental Build of configuration Default for project Firmware_SaberLigth ****
make 
Using optimization level g
Using newlib nano. No printf with floats supported
CC app.c
LD params
LD app/out/app.elf...
COPY app.elf TO app.bin
COPY app.elf TO app.hex
LIST
NAME
SIZEOF app.elf...
   text	   data	    bss	    dec	    hex	filename
   7504	    436	    380	   8320	   2080	app/out/app.elf

Selected program: app
Selected board: edu_ciaa_nxp
15:14:11 **** Incremental Build of configuration Default for project Firmware_SaberLigth ****
make 
Using optimization level g
Using newlib nano. No printf with floats supported
SIZEOF app.elf...
   text	   data	    bss	    dec	    hex	filename
   7504	    436	    380	   8320	   2080	app/out/app.elf

Selected program: app
Selected board: edu_ciaa_nxp
